--- a/job-card/src/main/resources/application.properties
+++ b/job-card/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=job-card
+
+#datasource connection properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/dzt_job_card_db
+spring.datasource.name = dzt_job_card_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres1
+
+server.port=9000
+
+server.error.include-stacktrace=never
